--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Login</title>
 </head>
 <body>
-    <div class="container">
+    <div class="background-image"></div> <div class="container">
         <div class="cartao-login">
             <h1>Sistema de Gestãode Tarefas</h1>
             <p>Faça login para acessar o sistema</p>
@@ -17,7 +17,7 @@
                 <label for="senha">Senha</label>
                 <input type="password" placeholder="Digite seu usuário" name="senha" id="senha">
             </form>
-            
+
             <button>Entrar</button>
             <a href="./pg-cadastro.html">Ir para a página de cadastro</a>
 
